# ultima_serve

./: .dockerignore  .gitignore  DockerFile  LICENSE  README.md  build_push_aws.yml  pyproject.toml
.github/workflows/: build_push_aws.yml
app_serve/app_serve/: chain.py
app_serve/tests/: test_chain.py
my_langserve/: Dockerfile  README.md  pyproject.toml  supervisord.conf
my_langserve/app/: server.py
