[tool.poetry]
name = "my_langserve"
version = "0.1.0"
description = ""
authors = ["Sam"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.22"}
pydantic = "<2"
langchain-cli = "^0.0.19"
pirate-speak = {path = "packages/pirate-speak", develop = true}
app_serve = {path = "packages/app_serve", develop = true}
python-dotenv = "^1.0.0"
boto3 = "^1.29.7"
core = {path = "packages/core", develop = true}
starlette = "^0.27.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
